# pyAutoSpec

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
examples/: Automata Learning.ipynb  Classification (MPS based).ipynb  Derivative.ipynb  Digits Classification (MPS based).ipynb  Entanglement Paths (MPS based).ipynb  Image Learning.ipynb  MNIST Classification (MPS based).ipynb  Polynomials.ipynb  Simple Weighted Automata.ipynb  Titanic Classification (MPS based).ipynb  Trigonometric Functions (MPS based).ipynb  Trigonometric Functions (matrix product states).ipynb  Trigonometric Functions.ipynb
pyautospec/: __init__.py  dataset_mps.py  dataset_umps.py  datasets.py  dmrg2_learning.py  dmrg_learning.py  encoder.py  function_mps.py  function_umpo.py  function_umps.py  function_wfa.py  gen_fun_umps.py  image_wfa.py  mps.py  mps2.py  mpsc.py  plots.py  spectral_learning.py  umpo.py  umps.py  wfa.py
src/pyautospec/: __init__.py  datasets.py  dmrg_learning.py  encoder.py  function_mps.py  function_umpo.py  function_umps.py  function_wfa.py  mps2.py  ps_basis.py  wfa.py
test/: test_mps.py
