[metadata]
name = pyautospec
version = attr: pyautospec.__version__

url = https://github.com/lucamarx/pyAutoSpec

author = Luca Marx
author_email = luca@lucamarx.com

description = Simple spectral learning for weighted automata
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True

python_requires = >=3.8

install_requires =
    scikit-image >= 0.19.2
    scikit-learn >= 1.0.2
    matplotlib   >= 3.3.4
    graphviz     >= 0.19.0
    seaborn      >= 0.11.2
    pandas       >= 1.4.2
    tqdm         >= 4.62.0
    jaxlib       >= 0.3.0
    jax          >= 0.3.0
